--- a/NLog.Web.AspNetCore/project.json
+++ b/NLog.Web.AspNetCore/project.json
@@ -19,13 +19,17 @@
     "dependencies": {
         "Microsoft.AspNetCore.Http.Extensions": "1.0.0-rc2-final",
         "Microsoft.AspNetCore.Hosting.Abstractions": "1.0.0-rc2-final",
-        "NLog": "4.4.0-beta9"
+        "NLog.Extensions.Logging": "1.0.0-rc2-final-2016-05-21"
     },
 
     "title": "NLog.Web.AspNetCore",
     "frameworks": {
-        "netstandard1.3": { },
-        "net451": { }
+        "netstandard1.3": {
+            "NLog": "4.4.0-beta9"
+        },
+        "net451": {
+            "NLog": "4.3.4"
+        }
 
 
     },
